tests/ui/auto_plugin_missing_param.rs
use bevy_auto_plugin_macros::*;

#[auto_plugin]
fn plugin(_app: &bevy::app::App) {}

// dummy main
fn main() {
    
}